# web-server

./: .editorconfig  Cargo.toml  rustfmt.toml
public/: 404.html  index.html  script.js
src/: error.rs  handler.rs  http.rs  main.rs  parse.rs  prelude.rs  server.rs  tree.rs
src/http/: code.rs  common.rs  method.rs  mod.rs  request.rs  response.rs  uri.rs
src/routing/: mod.rs  route.rs  route_handler.rs  router.rs
